# cmake-generator

./: .gitignore  LICENSE  README.md
docs/: cmake-generator.1.rst
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/lib/: CMakeLists.txt
src/lib/include/: File.h  Folder.h  FolderManager.h  Settings.h  Utils.h
src/lib/src/: File.cpp  Folder.cpp  FolderManager.cpp  Settings.cpp  Utils.cpp
src/res/templates/: CMakeApp_template.txt  CMakeGen_template.txt  CMakeLib_template.txt  include_template.h  main_template.cpp  src_template.cpp
